[gd_scene load_steps=15 format=2]

[ext_resource path="res://Resources/Fonts/BleedingPixels.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/GameScene/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/GameScene/Highscores.gd" type="Script" id=3]
[ext_resource path="res://Sprites/BombItem/hand_grenade.png" type="Texture" id=4]
[ext_resource path="res://Resources/Music/Large-Zombie-Horde-www.fesliyanstudios.com (online-audio-converter.com).mp3" type="AudioStream" id=5]
[ext_resource path="res://Sprites/BombItem/redLandmine.png" type="Texture" id=6]
[ext_resource path="res://Sprites/BombItem/fakewall.png" type="Texture" id=7]
[ext_resource path="res://Sprites/BombItem/barrel.png" type="Texture" id=8]
[ext_resource path="res://Scenes/GameScene/World.gd" type="Script" id=33]
[ext_resource path="res://Scenes/GameScene/BulletManager.gd" type="Script" id=34]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.0352941, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=4]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.0235294, 0, 0, 1 )
border_blend = true

[node name="World" type="Control"]
script = ExtResource( 33 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 705.618, 352.243 )

[node name="BulletManager" type="Node2D" parent="."]
position = Vector2( 0.413544, 1.6542 )
scale = Vector2( 0.997358, 1.00698 )
script = ExtResource( 34 )

[node name="Difficulty_spawn_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Navigation2D" type="Navigation2D" parent="." groups=[
"LevelNavigation",
]]

[node name="GUI" type="CanvasLayer" parent="."]
layer = 0

[node name="ScoreContainer" type="MarginContainer" parent="GUI"]
anchor_left = 0.386
anchor_top = 0.005
anchor_right = 0.386
anchor_bottom = 0.005
margin_left = 100.952
margin_top = 8.16
margin_right = 242.952
margin_bottom = 77.16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="GUI/ScoreContainer"]
margin_top = 9.0
margin_right = 141.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "30"
align = 1
script = ExtResource( 3 )

[node name="WaveNotificationLabel" type="Label" parent="GUI"]
margin_left = 514.541
margin_top = 78.7102
margin_right = 655.541
margin_bottom = 138.71
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.976471, 0.0156863, 0.0156863, 1 )
custom_colors/font_color_shadow = Color( 0.980392, 0.74902, 0.74902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaveNotification_timer" type="Timer" parent="GUI/WaveNotificationLabel"]
wait_time = 2.5

[node name="ItemGUI" type="CanvasLayer" parent="."]

[node name="GrenadePanel" type="Panel" parent="ItemGUI"]
margin_left = 1065.0
margin_top = 679.0
margin_right = 1141.0
margin_bottom = 755.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture" type="TextureRect" parent="ItemGUI/GrenadePanel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 73.0
margin_bottom = 52.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GreandeLabel" type="Label" parent="ItemGUI/GrenadePanel"]
margin_left = 1.0
margin_top = 57.0
margin_right = 74.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LandminePanel" type="Panel" parent="ItemGUI"]
margin_left = 1141.23
margin_top = 679.175
margin_right = 1217.23
margin_bottom = 755.175
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture" type="TextureRect" parent="ItemGUI/LandminePanel"]
margin_left = 8.0
margin_top = 2.0
margin_right = 71.0
margin_bottom = 52.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LandmineLabel" type="Label" parent="ItemGUI/LandminePanel"]
margin_left = 1.0
margin_top = 57.0
margin_right = 74.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FakewallPanel" type="Panel" parent="ItemGUI"]
margin_left = 1217.34
margin_top = 679.015
margin_right = 1293.34
margin_bottom = 755.015
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture" type="TextureRect" parent="ItemGUI/FakewallPanel"]
margin_left = 12.7008
margin_top = 3.68445
margin_right = 63.7008
margin_bottom = 53.6844
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FakewallLabel" type="Label" parent="ItemGUI/FakewallPanel"]
margin_left = 1.0
margin_top = 57.0
margin_right = 74.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarrelPanel" type="Panel" parent="ItemGUI"]
margin_left = 1288.75
margin_top = 679.015
margin_right = 1364.75
margin_bottom = 755.015
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture" type="TextureRect" parent="ItemGUI/BarrelPanel"]
margin_left = 12.7008
margin_top = 3.68445
margin_right = 63.7008
margin_bottom = 53.6844
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarrelLabel" type="Label" parent="ItemGUI/BarrelPanel"]
margin_left = 1.0
margin_top = 57.0
margin_right = 74.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Incoming_monster_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[connection signal="timeout" from="Difficulty_spawn_timer" to="." method="_on_Difficulty_spawn_timer_timeout"]
[connection signal="timeout" from="GUI/WaveNotificationLabel/WaveNotification_timer" to="." method="_on_WaveNotification_timer_timeout"]
